@@ -1,3 +1,12 @@
+2020-02-15  Patrick Palka  <ppalka@redhat.com>
+
+	* include/bits/ranges_algo.h (ranges::__find_end): Fold into ...
+	(ranges::find_end): ... here.
+	(ranges::__lexicographical_compare): Fold into ...
+	(ranges::lexicographical_compare): ... here.
+	* include/bits/ranges_algobase.h (ranges::__equal): Fold into ...
+	(ranges::equal): ... here.
+
 2020-02-15  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/bits/erase_if.h (__cpp_lib_erase_if): Define to 202002L.
